refactor: cleanup and extract constant